<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".ui.addmemory.AddMemories">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_add_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/et_user_title"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/edittext_shape"
                        android:hint="@string/enter_a_title"
                        android:inputType="text"
                        android:maxLength="25"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/Primary_text"
                        android:textSize="18sp"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_user_desc"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edittext_shape"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:maxLength="100"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/Primary_text"
                    android:textSize="16sp"
                    android:importantForAutofill="no"
                    tools:ignore="TextFields" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/et_user_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_shape"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date"
                    android:maxLength="25"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/Primary_text"
                    android:textSize="18sp"
                    android:importantForAutofill="no"
                    tools:ignore="TextFields" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_location"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_user_location"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/select_location"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/Primary_text"
                    android:textSize="18sp"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:layout_marginTop="5dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_insert_memory"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="Save"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/Green"
                        android:contentDescription="@string/save_image" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>